--- a/samples/Firebase/AdMob/AdMobSample/Info.plist
+++ b/samples/Firebase/AdMob/AdMobSample/Info.plist
@@ -34,5 +34,7 @@
 	</array>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcon.appiconset</string>
+	<key>GADApplicationIdentifier</key>
+	<string>ca-app-pub-3940256099942544~1458002511</string>
 </dict>
 </plist>
