[Firebase][Auth] Updated to version 6.4.3 (a.k.a 6.18.0) * Fixed some warnings on sample

--- a/samples/Firebase/Auth/AuthSample/packages.config
+++ b/samples/Firebase/Auth/AuthSample/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="xamarinios10" />
   <package id="Xamarin.Build.Download" version="0.10.0" targetFramework="xamarinios10" />
-  <package id="Xamarin.Facebook.iOS" version="4.24.0" targetFramework="xamarinios10" />
+  <package id="Xamarin.Facebook.CoreKit.iOS" version="5.12.0" targetFramework="xamarinios10" />
+  <package id="Xamarin.Facebook.LoginKit.iOS" version="5.12.0" targetFramework="xamarinios10" />
 </packages>
