--- a/source/Firebase/Core/Core.csproj
+++ b/source/Firebase/Core/Core.csproj
@@ -6,7 +6,7 @@
     <RootNamespace>Firebase.Core</RootNamespace>
     <AssemblyName>Firebase.Core</AssemblyName>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>6.6.3</FileVersion>
+    <FileVersion>6.6.4</FileVersion>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
@@ -23,7 +23,7 @@
     <PackageProjectUrl>https://go.microsoft.com/fwlink/?linkid=2007321</PackageProjectUrl>
     <PackageLicenseFile>License.md</PackageLicenseFile>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <PackageVersion>6.6.3</PackageVersion>
+    <PackageVersion>6.6.4</PackageVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -97,12 +97,14 @@
       <Kind>Framework</Kind>
       <SmartLink>True</SmartLink>
       <ForceLoad>True</ForceLoad>
+      <Frameworks>SystemConfiguration CoreTelephony</Frameworks>
     </NativeReference>
     <NativeReference Include="..\..\..\externals\GoogleDataTransportCCTSupport.framework">
       <Kind>Framework</Kind>
       <SmartLink>True</SmartLink>
       <ForceLoad>True</ForceLoad>
       <LinkerFlags>-lz</LinkerFlags>
+      <Frameworks>SystemConfiguration CoreTelephony</Frameworks>
     </NativeReference>
     <NativeReference Include="..\..\..\externals\GoogleToolboxForMac.framework">
       <Kind>Framework</Kind>
