[Firebase][CloudFirestore] Updated to version 1.11.2 (a.k.a 6.19.0)

--- a/source/Firebase/CloudMessaging/CloudMessaging.csproj
+++ b/source/Firebase/CloudMessaging/CloudMessaging.csproj
@@ -48,6 +48,7 @@
       <Kind>Framework</Kind>
       <Frameworks>SystemConfiguration</Frameworks>
       <WeakFrameworks>UserNotifications</WeakFrameworks>
+      <SmartLink>True</SmartLink>
       <ForceLoad>True</ForceLoad>
       <LinkerFlags>-lsqlite3</LinkerFlags>
     </NativeReference>
