--- a/source/Firebase/Database/Database.csproj
+++ b/source/Firebase/Database/Database.csproj
@@ -48,6 +48,7 @@
       <Kind>Framework</Kind>
       <LinkerFlags>-ObjC -lc++ -licucore</LinkerFlags>
       <Frameworks>CFNetwork Security SystemConfiguration</Frameworks>
+      <SmartLink>True</SmartLink>
       <ForceLoad>True</ForceLoad>
     </NativeReference>
   </ItemGroup>
