--- a/source/Firebase/DynamicLinks/DynamicLinks.csproj
+++ b/source/Firebase/DynamicLinks/DynamicLinks.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <NativeReference Include="..\..\..\externals\FirebaseDynamicLinks.framework">
       <Kind>Framework</Kind>
+      <SmartLink>True</SmartLink>
       <ForceLoad>True</ForceLoad>
       <LinkerFlags>-ObjC -lsqlite3 -lz</LinkerFlags>
       <Frameworks>AssetsLibrary CoreMotion MessageUI QuartzCore Security StoreKit SystemConfiguration UIKit</Frameworks>
