--- a/source/Google/MobileAds/MobileAds.csproj
+++ b/source/Google/MobileAds/MobileAds.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <NativeReference Include="..\..\..\externals\PersonalizedAdConsent.framework">
       <Kind>Framework</Kind>
+      <SmartLink>True</SmartLink>
       <ForceLoad>True</ForceLoad>
       <LinkerFlags>-ObjC</LinkerFlags>
     </NativeReference>
