--- a/source/Firebase/MLKit.Common/MLKit.Common.targets
+++ b/source/Firebase/MLKit.Common/MLKit.Common.targets
@@ -2,20 +2,26 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
 		<_FirebaseMLKitCommonAssemblyName>Firebase.MLKit.Common, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseMLKitCommonAssemblyName>
-		<_FirebaseMLCommonItemsFolder>FMLCmmn-0.17.0</_FirebaseMLCommonItemsFolder>
+		<_FirebaseMLCommonItemsFolder>FMLCmmn-0.19.0</_FirebaseMLCommonItemsFolder>
 		<_FirebaseMLCommonSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseMLCommonItemsFolder)\Frameworks\</_FirebaseMLCommonSDKBaseFolder>
 	</PropertyGroup>
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_FirebaseMLCommonItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/b3585d54f4d9224f/FirebaseMLCommon-0.17.0.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/6af4e180ffe8fd16/FirebaseMLCommon-0.19.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
-		<NativeReference Include="$(_FirebaseMLCommonSDKBaseFolder)FirebaseMLCommon.framework">
-			<Kind>Framework</Kind>
-			<SmartLink>True</SmartLink>
-			<ForceLoad>True</ForceLoad>
-			<LinkerFlags>-ObjC -lc++ -lsqlite3 -lz</LinkerFlags>
-			<Frameworks>Foundation LocalAuthentication QuartzCore Security</Frameworks>
-		</NativeReference>
+		<XamarinBuildRestoreResources Include="_FMLCmmnDownloadedItems" />
 	</ItemGroup>
+	<Target Name="_FMLCmmnDownloadedItems">
+		<ItemGroup>
+			<!-- From https://dl.google.com/dl/cpdc/6af4e180ffe8fd16/FirebaseMLCommon-0.19.0.tar.gz -->
+			<NativeReference Include="$(_FirebaseMLCommonSDKBaseFolder)FirebaseMLCommon.framework">
+				<Kind>Framework</Kind>
+				<SmartLink>True</SmartLink>
+				<ForceLoad>True</ForceLoad>
+				<LinkerFlags>-ObjC -lc++ -lsqlite3 -lz</LinkerFlags>
+				<Frameworks>Foundation LocalAuthentication QuartzCore Security</Frameworks>
+			</NativeReference>
+		</ItemGroup>
+	</Target>
 </Project>
