--- a/source/Firebase/MLKit.Common/MLKit.Common.csproj
+++ b/source/Firebase/MLKit.Common/MLKit.Common.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="MSBuild.Sdk.Extras/2.0.54">
   <PropertyGroup>
     <TargetFrameworks>Xamarin.iOS10</TargetFrameworks>
@@ -6,7 +6,7 @@
     <RootNamespace>Firebase.MLKit.Common</RootNamespace>
     <AssemblyName>Firebase.MLKit.Common</AssemblyName>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>0.17.0</FileVersion>
+    <FileVersion>0.19.0</FileVersion>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
@@ -23,7 +23,7 @@
     <PackageProjectUrl>https://go.microsoft.com/fwlink/?linkid=2029245</PackageProjectUrl>
     <PackageLicenseFile>License.md</PackageLicenseFile>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <PackageVersion>0.17.0</PackageVersion>
+    <PackageVersion>0.19.0</PackageVersion>
   </PropertyGroup>
 
   <ItemGroup>
