--- a/source/Firebase/MLKit.ModelInterpreter/MLKit.ModelInterpreter.targets
+++ b/source/Firebase/MLKit.ModelInterpreter/MLKit.ModelInterpreter.targets
@@ -2,35 +2,41 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
 		<_FirebaseMLKitModelInterpreterAssemblyName>Firebase.MLKit.ModelInterpreter, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseMLKitModelInterpreterAssemblyName>
-		<_FirebaseMLModelInterpreterItemsFolder>FMLMdlI-0.17.0</_FirebaseMLModelInterpreterItemsFolder>
+		<_FirebaseMLModelInterpreterItemsFolder>FMLMdlI-0.19.0</_FirebaseMLModelInterpreterItemsFolder>
 		<_FirebaseMLModelInterpreterSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseMLModelInterpreterItemsFolder)\Frameworks\</_FirebaseMLModelInterpreterSDKBaseFolder>
 		
-		<_TensorFlowLiteItemsFolder>TnsrFlwLt-1.13.1</_TensorFlowLiteItemsFolder>
-		<_TensorFlowLiteSDKBaseFolder>$(XamarinBuildDownloadDir)$(_TensorFlowLiteItemsFolder)\Frameworks\</_TensorFlowLiteSDKBaseFolder>
+		<_TensorFlowLiteCItemsFolder>TnsrFlwLtC-1.14.0</_TensorFlowLiteCItemsFolder>
+		<_TensorFlowLiteCSDKBaseFolder>$(XamarinBuildDownloadDir)$(_TensorFlowLiteCItemsFolder)\TensorFlowLiteC-1.14.0\Frameworks\</_TensorFlowLiteCSDKBaseFolder>
 	</PropertyGroup>
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_FirebaseMLModelInterpreterItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/48e78c429d2df3cd/FirebaseMLModelInterpreter-0.17.0.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/00e5438c83064d53/FirebaseMLModelInterpreter-0.19.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
-		<NativeReference Include="$(_FirebaseMLModelInterpreterSDKBaseFolder)FirebaseMLModelInterpreter.framework">
-			<Kind>Framework</Kind>
-			<SmartLink>True</SmartLink>
-			<ForceLoad>True</ForceLoad>
-			<LinkerFlags>-ObjC</LinkerFlags>
-			<Frameworks>CoreGraphics Foundation QuartzCore</Frameworks>
-		</NativeReference>
-		
-		<XamarinBuildDownload Include="$(_TensorFlowLiteItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/a3cc8a8fb2aec8f6/TensorFlowLite-1.13.1.tar.gz</Url>
+		<XamarinBuildDownload Include="$(_TensorFlowLiteCItemsFolder)">
+			<Url>https://dl.google.com/dl/cpdc/0e27bc28472e2519/TensorFlowLiteC-1.14.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
-		<NativeReference Include="$(_TensorFlowLiteSDKBaseFolder)tensorflow_lite.framework">
-			<Kind>Framework</Kind>
-			<SmartLink>True</SmartLink>
-			<ForceLoad>True</ForceLoad>
-			<LinkerFlags>-ObjC -lc++</LinkerFlags>
-			<Frameworks>Accelerate</Frameworks>
-		</NativeReference>
+		<XamarinBuildRestoreResources Include="_FMLMdlIDownloadedItems" />
 	</ItemGroup>
+	<Target Name="_FMLMdlIDownloadedItems">
+		<ItemGroup>
+			<!-- From https://dl.google.com/dl/cpdc/00e5438c83064d53/FirebaseMLModelInterpreter-0.19.0.tar.gz -->
+			<NativeReference Include="$(_FirebaseMLModelInterpreterSDKBaseFolder)FirebaseMLModelInterpreter.framework">
+				<Kind>Framework</Kind>
+				<SmartLink>True</SmartLink>
+				<ForceLoad>True</ForceLoad>
+				<LinkerFlags>-ObjC</LinkerFlags>
+				<Frameworks>CoreGraphics Foundation QuartzCore</Frameworks>
+			</NativeReference>
+
+			<!-- From https://dl.google.com/dl/cpdc/0e27bc28472e2519/TensorFlowLiteC-1.14.0.tar.gz -->
+			<NativeReference Include="$(_TensorFlowLiteCSDKBaseFolder)TensorFlowLiteC.framework">
+				<Kind>Framework</Kind>
+				<SmartLink>True</SmartLink>
+				<ForceLoad>True</ForceLoad>
+				<LinkerFlags>-lc++</LinkerFlags>
+			</NativeReference>
+		</ItemGroup>
+	</Target>
 </Project>
